@@ -20,6 +20,7 @@ version 1.4.2
 8091							: odt diff script
 8094							: dialogs2 settings help
 8103							: issue 324
+8122							: revert externals
 
 version 1.4.1
 7516							: bugtraq:message with only %BUGID% and bugtraq:number as true
